# open-unlearning

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Online Unlearning 29fbced0893181e79338ee6be43bcfad.md  README.md  README_UNLEARNING.md  ROADMAP.md  docker-compose.yml  pyproject.toml  setup.py  setup_data.py  中文总结.md
community/: leaderboard.md
configs/: efficiency.yaml  train.yaml  unlearn.yaml
docs/: EFFICIENCY_TRACKING.md  LMCLEANER_IMPLEMENTATION_SUMMARY.md  LMCLEANER_QUICKSTART.md  LMCLEANER_TEST_PLAN.md  LMCLEANER_TEST_SUMMARY.md  LMCleaner0119.tex  MEMORY_OPTIMIZATION.md  METRICS.md  PR_SUMMARY.md  TEST_FAILURES.md  TEST_FAILURE_ANALYSIS.md  TRAININGLOGGER_IMPLEMENTATION.md  components.md  contributing.md  evaluation.md  historical_params_hvp.md  links.md  lmcleaner_implementation.md  repro.md
scripts/: benchmark_efficiency.sh  build_eta_cache_parallel.py  compare_efficiency.py  compute_figure1_data.py  compute_figure1_exact.py  compute_spectral_from_checkpoints.py  docker-entrypoint.sh  env.sh  eval_llama32_1b_tofu.sh  eval_lmcleaner_epochs.sh  finetune.sh  finetune_llama32_1b_with_logger.sh  finetune_phi35_with_epoch_logger.sh  finetune_sgd.sh  forget_distribution_analysis.py  jobs_gpt2_unlearn.txt  lmcleaner_experiments.sh  lmcleaner_multi_checkpoint.sh  lmcleaner_parallel.sh  lmcleaner_param_opt.sh  parallel_unlearn_eval_gpt2.sh  rebuttalB_forget_distribution.py  rebuttalB_train.sh  refiletune_retain.py  run_all_B.sh  run_all_experiments.sh  run_all_methods_eval.sh  run_all_methods_parallel.sh  run_all_refinetune.sh  run_evals_parallel.sh  run_evals_parallel_v2.sh  run_gpt2_unlearn_eval.py  run_lmcleaner_all.sh  run_lmcleaner_direct.py  run_lmcleaner_reduced.sh  run_missing_experiments.sh  run_parallel_gpt2.sh  run_rebuttalB.sh  run_single_job.sh  setup-workspace-config.sh  (+5 more)
src/: train.py
tests/: README_LMCLEANER_TESTS.md  RUNNING_TESTS.md  conftest.py  test_efficiency_tracking.py  test_eval_metrics.py  test_lmcleaner_core.py  test_lmcleaner_trainers.py  test_mia_attacks.py  (+2 more)
(+297 files in other folders)
