[project]
name = "open-unlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.3.0",
    "deepspeed>=0.18.1",
    "hydra-core>=1.3.2",
    "lm-eval>=0.4.9",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
